functional programming initial commit #1